--- a/templates/register.html
+++ b/templates/register.html
@@ -3,12 +3,19 @@
 	<title>WebVote</title>
 </head>
 <body>
-<form method ="POST" action = "">
-	<input value = {{request.form.name}}><label>Full Name</label>
-	<input value = {{request.form.email}}><label>Email</label>
-	<input value = {{request.form.username}}><label>Username</label>
-	<input value = {{request.form.password}}><label>Password</label>
-	<input value = {{request.form.confirm}}><label>Confirm Password</label>
-	<button type="submit">Register </button>
-	</form>
+	<div class ="container">
+		<form method ="POST" action = "">
+			<div class = "form-label-group">
+			<input type = "text" id= "inputName" name = "name" class = "form-control" placeholder="Full Name" required="required"><label for = "inputName">Full Name</label>
+		</div>
+		<div class = "form-label-group">
+			<input type = "text" id= "inputUsername" name = "username" class = "form-control" placeholder="Username" required="required"><label for = "inputName">Username</label>
+		</div><div class = "form-label-group">
+			<input type = "text" id= "inputEmail" name = "email" class = "form-control" placeholder="Email" required="required"><label for = "inputEmail">Email address</label>
+		</div><div class = "form-label-group">
+			<input type = "password" id= "inputPassword" name = "password" class = "form-control" placeholder="Password" required="required"><label for = "inputPassword">Password</label>
+		</div><div class = "form-label-group">
+			<input type = "password" id= "confirmPassword" name = "confirm" class = "form-control" placeholder="Confirm Password" required="required"><label for = "confirmPassword">Confirm Password</label>
+		</div>
+		<button type="submit" class= "btn btn-primary brn-block">Register</button>
 </body>
